# itbank-backend

./: .gitignore  .pylintrc  Makefile  README.md  install-cli.sh  pyproject.toml  reporte_transacciones.html  requirements.txt
.github/: formatter.yml  labeler.yml
.github/workflows/: delete_branch.yml  hotfix_dev.yml  hotfix_develop.yml  labeler.yml  prevent_branch_split.yml  static_checks.yml
Reportes/: reporte_transacciones.html
cli/: listado_cheques.py  procesar_json.py  procesar_tps.py
data/: transacciones_tps.json
database/: cuarta_problematica.sql  itbank.db  itbank.sql  primer_problematica.sql  segunda_problematica.sql  third_problem.sql
itbank/: __main__.py  itbankcli.sh  listado_cheques.py
modules/: checks.py  tps.py
scripts/: listado_cheques.py
test/: checks.csv
tests/: test_tps.py
