[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itbank"
version = "0.0.1"
authors = [{ name = "Leandro Barba", email = "me@leanbarba.com" }]
description = "A CLI utility and a web server for itbank backend"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/notleanbarba/itbank-backend"
